cmake_minimum_required(VERSION 3.23)
project(1_Sequence_structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(T1.cpp T1.cpp)
add_executable(T2.cpp T2.cpp)
add_executable(T3.cpp T3.cpp)
add_executable(T4.cpp T4.cpp)
add_executable(T5.cpp T5.cpp)
add_executable(T6.cpp T6.cpp)
add_executable(T7.cpp T7.cpp)
add_executable(T8.cpp T8.cpp)
add_executable(T9.cpp T9.cpp)