cmake_minimum_required(VERSION 3.23)
project(2_Branching_structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(T1 T1.cpp)
add_executable(T2 T2.cpp)
add_executable(T3 T3.cpp)
add_executable(T4 T4.cpp)
add_executable(T5 T5.cpp)
add_executable(T6 T6.cpp)
add_executable(T7 T7.cpp)
add_executable(T8 T8.cpp)
add_executable(T9 T9.cpp)
add_executable(T10 T10.cpp)
add_executable(T11 T11.cpp)
add_executable(T12 T12.cpp)
add_executable(T13 T13.cpp)
add_executable(T14 T14.cpp)
