cmake_minimum_required(VERSION 3.23)
project(4_Array)

set(CMAKE_CXX_STANDARD 14)

add_executable(T1.cpp T1.cpp)
add_executable(T2.cpp T2.cpp)
add_executable(T3.cpp T3.cpp)
add_executable(T4.cpp T4.cpp)
add_executable(T5.cpp T5.cpp)
add_executable(T6.cpp T6.cpp)
add_executable(T7.cpp T7.cpp)
add_executable(T8.cpp T8.cpp)
add_executable(T9.cpp T9.cpp)
add_executable(T10.cpp T10.cpp)
add_executable(T11.cpp T11.cpp)
add_executable(T12.cpp T12.cpp)
add_executable(T13.cpp T13.cpp)
add_executable(T14.cpp T14.cpp)
add_executable(T15.cpp T15.cpp)
add_executable(T16.cpp T16.cpp)
add_executable(T17.cpp T17.cpp)
add_executable(T18.cpp T18.cpp)
add_executable(T19.cpp T19.cpp)
add_executable(T20.cpp T20.cpp)
add_executable(T21.cpp T21.cpp)
add_executable(T22.cpp T22.cpp)
add_executable(T23.cpp T23.cpp)
add_executable(T24.cpp T24.cpp)
add_executable(T25.cpp T25.cpp)